[project]
name = "prompt-regression-kit"
version = "0.1.0"
description = "Minimal LLM prompt regression testing toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Eren Ozturk", email = "erenozturk@gmail.com" }
]
license = { text = "MIT" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
# Python version
target-version = "py311"

# Max line length
line-length = 100

# Exclude directories
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with spaces
indent-style = "space"
